--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,6 @@
         background-color: #033b96;
 
     }
-
     header{
         width: 100%;
         height: 100px;
@@ -61,12 +60,9 @@
         <section class="image-post">
             <img class="image" src="{{ image }}" alt="Imagem da Postagem">
         </section>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni adipisci commodi suscipit. Expedita, harum corporis odio esse eligendi vero. Maxime, esse officiis dolores animi ipsum nostrum illo accusantium nam impedit?
-            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias facere autem unde consectetur necessitatibus fuga quis, placeat nemo eveniet repudiandae corrupti itaque, dolores, cumque veritatis blanditiis earum deserunt! Reprehenderit, in?
-        </p>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit, quidem doloribus, modi harum ullam aliquid omnis possimus veniam alias distinctio voluptatem quibusdam dolorem corporis itaque repellat eius excepturi magnam dolor.
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio commodi autem unde iste beatae laudantium dolorum cupiditate veniam sapiente asperiores doloremque eum expedita doloribus earum quo odio, suscipit voluptatum provident!
-        </p>
+        <section class="conteudo-post">
+            
+        </section>
     </main>
 
 </body>
