--- a/templates/index.html
+++ b/templates/index.html
@@ -27,10 +27,10 @@
         padding: 15px;
         text-align: center;
     }
-    main{
+    /* main{
         height: 100%;
         background: lightgray;
-    }
+    } */
 
     section.image-post{
         width: 85%;
@@ -61,9 +61,11 @@
             <img class="image" src="{{ image }}" alt="Imagem da Postagem">
         </section>
         <section class="conteudo-post">
-            
+            <p> {{conteudo_site}} </p>
         </section>
     </main>
-
+    <footer>
+        <p></p>
+    </footer>
 </body>
 </html>
