Atualizando alguns recursos do site

--- a/templates/index.html
+++ b/templates/index.html
@@ -3,51 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>{{name_page}}</title>
+    <link rel="stylesheet" href="../static/style.css">
     <style>
-    *{
-        font-family: Arial, Helvetica, sans-serif;
-        padding: 0;
-        margin: 0;
-    }
-    body{
-        background-color: #033b96;
-
-    }
-    header{
-        width: 100%;
-        height: 100px;
-        background-color: white;
-        box-shadow: 1px 1px 3px black;
-        position: sticky;
-        top: 0;
-        
-    }
-    header > h1 {
-        color: black;
-        padding: 15px;
-        text-align: center;
-    }
-    /* main{
-        height: 100%;
-        background: lightgray;
-    } */
-
-    section.image-post{
-        width: 85%;
-        height: 45%;
-        background-color: white;
-        margin: auto;
-        margin-top: 15px;
-        border-radius: 0px 0px 15px 15px ;
-    }
-
-    .image{
-        width: 90%;
-        padding: 15px;
-        display: block;
-        margin: auto;
-        
-    }
 
 
     </style>
@@ -61,11 +18,18 @@
             <img class="image" src="{{ image }}" alt="Imagem da Postagem">
         </section>
         <section class="conteudo-post">
+
             <p> {{conteudo_site}} </p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, enim! Nesciunt nam quis ipsa ab at eaque illum eos, amet qui nulla corrupti unde ratione doloribus tempora recusandae sequi placeat?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum enim magni ipsa, minus tempore possimus numquam iste in cupiditate veniam ad perferendis commodi molestiae voluptates dignissimos distinctio aliquam sint impedit?Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto suscipit, nostrum cum aliquid odio tempore doloremque aspernatur laudantium sint dolores eligendi culpa sit. Enim veritatis ex nostrum unde natus sapiente.
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugiat sit in ad ea, est vitae ipsa aliquid iusto obcaecati unde voluptate quo, corporis atque laboriosam ullam, repellat aut nam voluptates. Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit voluptas hic ullam totam dolor, explicabo consequatur ratione dolorum cumque nihil maiores, vitae perspiciatis, repellat adipisci animi iure! Ducimus, debitis doloremque?</p>
         </section>
     </main>
+
+
+    <!-- RODAPÉ DO SITE -->
     <footer>
-        <p></p>
+        <p>Site criado por <a target="_blank" href="https://github.com/mateussiilva">mateussiilva</a></p>
     </footer>
 </body>
 </html>
